my second commit

--- a/index.html
+++ b/index.html
@@ -2,26 +2,45 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, inital-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 	<title>Gabe Bulatao - My Web Developer Portfolio</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>
 
-	<main id=wrapper">
-		<img class=my-picture" src="assets/img/me.jpg">
-		<h1> Gabe Bulatao</h1>
-		
-		<h2> Full Stack Web Developer</h2>	
+	<main id="wrapper">
+		<!-- Main section -->
+		<section id="main-section">
 
-		<p class="bio"> I am a JavaScript and PHP developer, Tech Enthusiast.</p>
+			<div class="about">
+		<img class="my-picture" src="assets/img/me.jpg">
+				<h1> Gabe Bulatao</h1>
+				
+				<h2> Full-Stack Web Developer</h2>	
+
+				<p class="bio"> I am a JavaScript and PHP developer, Tech Enthusiast.</p>
+</div>
+
+		</section>
+		<!-- Portfolio section -->
+		<section id="portfolio-section">
+		<h2>portfolio section</h2>
+		</section>
+		<!-- Skills section -->
+		<section id="skills-section">
+		<h2>skills section</h2>
+		</section>
+		<!-- About section -->
+		<section id="about-section">
+		<h2>about section</h2>
+		</section>
 	</main>
-
-
 <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
