--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>Gabe Bulatao - My Web Developer Portfolio</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -18,11 +18,16 @@
 		<!-- Main section -->
 		<section id="main-section">
 
+			<a href="mailto:bulatao.gabe@gmail.com">bulatao.gabe@gmail.com</a>
+
+			<a href="https://github.com/gabebulatao">github.com/gabebulatao</a>
+
 			<div class="about">
 		<img class="my-picture" src="assets/img/me.jpg">
 				<h1> Gabe Bulatao</h1>
 				
-				<h2> Full-Stack Web Developer</h2>	
+				<h2> Full-Stack Web Developer</h2>
+			
 
 				<p class="bio"> I am a JavaScript and PHP developer, Tech Enthusiast.</p>
 </div>
