--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
 
 	<main id="wrapper">
+
+		<p>A TEXT TO CAUSE SOME CONFLICT.</p>
 		<!-- Main section -->
 		<section id="main-section">
 
